# ainex_ros

./: ROS_DOCUMENTATION.md
container/: Dockerfile  rebuild.sh  run.sh
pc/container/: Dockerfile
pc/hw_lib/env/impl/: real_robot_env.py
pc/lib/env/: env.py
pc/lib/env/impl/: real_robot_env.py
robot/myproject/: activate_ros_env.sh  execute_actions.py  test.py
robot/ros_ws/: .hiwonderrc  .zshrc  command
robot/ros_ws/.ssh/: id_rsa  id_rsa.pub
robot/ros_ws/src/ainex_app/scripts/: app_node.py
robot/ros_ws/src/ainex_bringup/launch/: bringup.launch
robot/ros_ws/src/ainex_bringup/scripts/: source_env.bash  source_env_backup.bash
robot/ros_ws/src/ainex_calibration/config/: imu_calib.yaml
robot/ros_ws/src/ainex_calibration/launch/: imu_calibration.launch
robot/ros_ws/src/myproject/: CMakeLists.txt  README.md  package.xml
robot/ros_ws/src/myproject/config/: init_pose.yaml
robot/ros_ws/src/myproject/launch/: action_server.launch
robot/ros_ws/src/myproject/scripts/: action_client.py  action_server.py  test_new_features.py
robot/software/ainex_controller/: action_group_controller.py  bus_servo_cmd.py  bus_servo_control.py  main.py  servo_controller.py
robot/software/ainex_controller/ActionGroups/: action_change.py
robot/software/calibration/: calibration.sh
robot/software/lab_tool/: lab_tool.sh
robot/software/servo_tool/: bus_servo_control.py
robot/software/walking_controller/: main.py  ui.py
scripts/: pc_environment.sh  pull_from_robot.sh  push_to_robot.sh  rebuild.sh  run.sh  ssh_to_robot.sh  sync_repo.sh
(+70 files in other folders)
