<?xml version="1.0"?>
<package format="2">
  <name>myproject</name>
  <version>0.0.0</version>
  <description>Custom ROS nodes for Ainex robot</description>

  <maintainer email="sqidde@gmail.com">User</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
</package> 